%% Elixir v5 — Domain 3: MEMBER + CLAN OBSERVATION & ANALYTICS
%% This is the biggest sprawl: ~13 tables that are all "what we observed about a
%% member/clan over time." Mix of: latest-state, point-in-time snapshots,
%% daily metrics, and derived rollups. NOTE the near-duplication between
%% member_battle_facts and battle_telemetry (Event Core's copy).
erDiagram
    members {
        int member_id PK
        text player_tag UK
        text current_name
    }
    clan_memberships {
        int membership_id PK
        int member_id FK
        text joined_at
        text left_at
    }
    member_current_state {
        int member_id PK,FK
        text role
        int trophies
        int clan_rank
        text raw_json "denormalized API dump"
    }
    member_state_snapshots {
        int snapshot_id PK
        int member_id FK
        text observed_at
        int trophies
        text raw_json
    }
    member_daily_metrics {
        int metric_id PK
        int member_id FK
        text metric_date
        int trophies
    }
    player_profile_snapshots {
        int snapshot_id PK
        int member_id FK
        text fetched_at
        text cards_json
        text current_deck_json
    }
    member_card_collection_snapshots {
        int snapshot_id PK
        int member_id FK
        text cards_json
    }
    member_deck_snapshots {
        int snapshot_id PK
        int member_id FK
        text deck_json
    }
    member_card_usage_snapshots {
        int snapshot_id PK
        int member_id FK
        text cards_json
    }
    member_battle_facts {
        int battle_fact_id PK
        int member_id FK
        text battle_time
        text outcome
        text raw_json
    }
    battle_telemetry {
        text player_tag PK "NOT member_id"
        text battle_time PK
        text outcome
        text mode_group
    }
    member_recent_form {
        int form_id PK
        int member_id FK
        text scope
        real win_rate
    }
    member_daily_battle_rollups {
        int rollup_id PK
        int member_id FK
        text battle_date
        text mode_group
    }
    awards {
        int award_id PK
        int member_id FK
        text award_type
        int season_id
    }
    clan_daily_metrics {
        int metric_id PK
        text clan_tag "no member FK"
        text metric_date
        int clan_score
    }
    clan_daily_battle_rollups {
        int rollup_id PK
        text clan_tag
        text battle_date
        text mode_group
    }

    members ||--o{ clan_memberships : "tenure"
    members ||--|| member_current_state : "latest"
    members ||--o{ member_state_snapshots : "history"
    members ||--o{ member_daily_metrics : "daily"
    members ||--o{ player_profile_snapshots : "profile"
    members ||--o{ member_card_collection_snapshots : "cards"
    members ||--o{ member_deck_snapshots : "decks"
    members ||--o{ member_card_usage_snapshots : "usage"
    members ||--o{ member_battle_facts : "battles"
    members ||--o{ member_recent_form : "form"
    members ||--o{ member_daily_battle_rollups : "rollups"
    members ||--o{ awards : "awarded"
    member_battle_facts ||..|| battle_telemetry : "near-duplicate (tag vs id)"
